<resources>
    <string name="app_name">OptiPlans</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tv_home_caption">Модель</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_home_model_name">Модель</string>
    <string name="tv_home_num_of_periods">Количество периодов: </string>
    <string name="tv_home_units">Установки</string>
    <string name="tv_home_streams">Потоки</string>
    <string name="period">период</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="fix">fix</string>
    <string name="price">цена</string>
    <string name="sail">Продажа</string>
    <string name="purchase">Покупка</string>
    <string name="solution">решение</string>
    <string name="tag">тэг:</string>
    <string name="balance">Баланс</string>
    <string name="stream_period">Период:</string>
    <string name="schema">schema</string>
    <string name="home">home</string>
    <string name="table">table\n</string>
    <string name="unit">unit</string>
    <string name="stream">stream</string>
    <string name="iv_schema_description">Имитация схемы</string>
    <string name="button_collapse_description">кнопка свернуть/развернуть</string>
    <string name="caps">Мощности</string>
    <string name="regimes">Режимы</string>
    <string name="unit_lable">Установка</string>
    <string name="stream_label">Поток</string>
    <string name="purchases">Покупки</string>
    <string name="sails">Продажи</string>
    <string name="commerce">commerce</string>
    <string name="measure_unit">Ед.изм.:</string>
</resources>