<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_commerce_purchases"
        style="@style/BigCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/purchases"
        app:layout_constraintEnd_toStartOf="@id/s_commerce"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_commerce_sails"
        style="@style/BigCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/s_commerce"
        app:layout_constraintTop_toTopOf="@id/tv_commerce_purchases"
        app:layout_constraintBottom_toBottomOf="@id/tv_commerce_purchases"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/s_commerce"
        android:theme="@style/MySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/tv_commerce_purchases"
        app:layout_constraintEnd_toStartOf="@+id/tv_commerce_sails"
        app:layout_constraintStart_toEndOf="@+id/tv_commerce_purchases"
        app:layout_constraintTop_toTopOf="@+id/tv_commerce_purchases"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <FrameLayout
        android:id="@+id/fl_commerce"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_commerce_purchases"
        android:background="@color/gray" />

    <TableLayout
        android:id="@+id/tl_commerce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_commerce">
        <TableRow
            android:id="@+id/tr_commerce_period_row">
            <TextView
                style="@style/MidCaption"
                android:layout_marginStart="2dp"
                android:layout_gravity="center_vertical"
                android:text="@string/period"/>
        </TableRow>
        <FrameLayout
            android:background="@color/light_blue"
            android:layout_height="1dp">
        </FrameLayout>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>