<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.StreamFragment">

    <TextView
        android:id="@+id/tv_stream_tag0"
        style="@style/GrayCaption"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:text="@string/tag"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_stream_tag"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_stream_tag"
        style="@style/GrayCaption"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_stream_tag0"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="PND" />

    <TextView
        android:id="@+id/tv_stream_name"
        style="@style/BigCaption"
        app:layout_constraintTop_toBottomOf="@+id/tv_stream_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:text="Полиэтилен низкого давления" />

    <FrameLayout
        android:id="@+id/fl_stream_first_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_stream_name"
        android:background="@color/gray"
        android:layout_marginTop="10dp"/>

    <HorizontalScrollView
        android:id="@+id/hsv_stream_sails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fl_stream_first_line"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TableLayout
                android:layout_width="wrap_content"
                android:stretchColumns="*"
                android:layout_height="wrap_content">
                <TableRow
                    android:id="@+id/tr_stream_sails_period">
                    <TextView
                        android:id="@+id/tv_stream_seils_top"
                        style="@style/MidCaption"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sails"/>
                </TableRow>
                <FrameLayout
                    android:background="@drawable/underline"
                    android:layout_height="5dp">
                </FrameLayout>
                <TableRow
                    android:id="@+id/tr_stream_sails_min">
                    <TextView
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/min"/>
                </TableRow>
                <TableRow
                    android:id="@+id/tr_stream_sails_max">
                    <TextView
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/max"/>
                </TableRow>
                <TableRow
                    android:id="@+id/tr_stream_sails_fix">
                    <TextView
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/fix"/>
                </TableRow>
                <TableRow
                    android:id="@+id/tr_stream_sails_price">
                    <TextView
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/price"/>
                </TableRow>
                <TableRow
                    android:id="@+id/tr_stream_sails_solution"
                    android:backgroundTint="@color/light_gray"
                    android:background="@drawable/frame">
                    <TextView
                        android:id="@+id/tv_stream_seils_bottom"
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/solution" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/fl_stream_second_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/hsv_stream_sails"
        android:background="@color/gray" />

    <FrameLayout
        android:id="@+id/fl_stream_third_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/fl_stream_second_line"
        android:background="@color/gray" />

    <HorizontalScrollView
        android:id="@+id/hsv_stream_purchases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fl_stream_third_line"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TableLayout
                android:layout_width="match_parent"
                android:stretchColumns="*"
                android:layout_height="wrap_content">
                <TableRow
                    android:id="@+id/tr_stream_purchases_period">
                    <TextView
                        style="@style/MidCaption"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/purchases"/>
                </TableRow>
                <FrameLayout
                    android:background="@drawable/underline"
                    android:layout_height="5dp">
                </FrameLayout>
                <TableRow
                    android:id="@+id/tr_stream_purchases_min">
                    <TextView
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/min"/>
                </TableRow>
                <TableRow
                    android:id="@+id/tr_stream_purchases_max">
                    <TextView
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/max"/>
                </TableRow>
                <TableRow
                    android:id="@+id/tr_stream_purchases_fix">
                    <TextView
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/fix"/>
                </TableRow>
                <TableRow
                    android:id="@+id/tr_stream_purchases_price">
                    <TextView
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/price"/>
                </TableRow>
                <TableRow
                    android:id="@+id/tr_stream_purchases_solution"
                    android:backgroundTint="@color/light_gray"
                    android:background="@drawable/frame">
                    <TextView
                        style="@style/SmallText"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/solution"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/fl_stream_fourth_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/hsv_stream_purchases"
        android:background="@color/gray" />

    <FrameLayout
        android:id="@+id/fl_stream_fifth_line"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/hsv_stream_purchases"
        android:background="@color/gray" />

    <TextView
        style="@style/MidCaption"
        android:id="@+id/tv_stream_balance"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl_stream_fifth_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="2dp"
        android:text="@string/balance"
        tools:text = "Баланс"/>

    <LinearLayout
        android:id="@+id/fl_stream_balance"
        app:layout_constraintTop_toBottomOf="@id/tv_stream_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_verticalAlign="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stream_produced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stream_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>