<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.UnitFragment">

    <TextView
        android:id="@+id/tv_unit_tag"
        style="@style/GrayCaption"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="PND" />

    <TextView
        android:id="@+id/tv_unit_name"
        style="@style/BigCaption"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_unit_tag"
        tools:text="Полиэтилен низкого давления" />

    <FrameLayout
        android:id="@+id/fl_unit_balance_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_unit_name"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/tv_unit_balance"
        style="@style/MidCaption"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl_unit_balance_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="2dp"
        android:text="@string/balance"/>

    <ImageView
        android:id="@+id/iv_unit_balance"
        android:layout_marginStart="10dp"
        android:layout_width="15dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toTopOf="@id/tv_unit_balance"
        app:layout_constraintBottom_toBottomOf="@id/tv_unit_balance"
        app:layout_constraintStart_toEndOf="@id/tv_unit_balance"
        android:background="@drawable/button_collapse"
        android:layout_gravity="center_vertical"
        android:text="@string/sails"/>

    <LinearLayout
        android:id="@+id/ll_unit_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_unit_balance">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/tv_unit_period"
                style="@style/SmallText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:text="@string/stream_period"/>

            <FrameLayout
                android:id="@+id/fl_unit_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/frame"
                android:layout_gravity="center">
                <Spinner
                    android:id="@+id/s_unit_period"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_unit_feeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp" />

            <com.example.optiplans.view.UnitView
                android:id="@+id/uv_unit"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_unit_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_unit_balance_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_unit_balance"
        android:background="@color/gray" />

</androidx.constraintlayout.widget.ConstraintLayout>